--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+img{
+  display: inline-block;
+}
 
 body{
   height: 100vh;
 }
 
 .icon{
-  width: 15px;
-  height: 15px;
+  width:24px;
 }
 
 .icon--white{
@@ -20,49 +22,156 @@ body{
 /*main container*/
 .dashboard{
   width: 100%;
+  height: 100vh;
   display:grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 5fr;
   grid-template-rows: repeat(4, 1fr);
-
 }
-
+/*navigation*/
+ 
 .nav{
   grid-column: 1/2;
   grid-row: 1/-1;
   height: 100vh;
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(250px,1fr));
-  gap: 30px;
+  grid-template-rows: repeat(auto-fit, minmax(100px,1fr));
+  gap: 20px;
+  align-items: center;
+  background-color: aquamarine;
+  
+}
+.nav_header{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav_title{
+  font-size: 32px;
 }
 
 .list{
   list-style: none;
   display: grid;
-  gap: 20px;
+  gap: 10px;
   font-size: 24px;
   font-weight: bold;
+  align-items: center;
+  padding: 10px;
 }
+
+.list_items{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .list_links{
   text-decoration: none;
   color: black;
 }
 
-.list_links > .icon{
-  margin-right: 15px;
-}
+
 .logo{
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  border-radius: 50%;
+
 }
  
+/*header and search*/
+
 .header{
   display: grid;
   grid-auto-flow:column;
-  
-  background-color: red;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto-fit;
+  gap: 10px;
   grid-column: 2/-1;
+  border-bottom: solid 2px #ccc;
+  box-shadow: 0 -2px rgba(204, 204, 204, 0.801);
+}
+
+.header_top{
+  display: flex;
+  grid-column: span 2;
+  align-items: flex-start;
+  padding:12px 24px;
+  justify-content: space-between;
+  height: fit-content;
+}
+
+.search{
+  display: flex;
+  align-items:center;
+  width: 90%;
+  gap :10px;
+
+  height: fit-content;
+}
+
+#search{
+  display: inline-block;
+  width: 100%;
+  height: 24px;
+  border-radius: 100px;
+  border-color: white;
+  background-color: #eee;
+}
+
+.notify{
+  display: flex;
+  align-items:center;
+  justify-content: flex-end;
+  width: 100%;
+  height: fit-content;
+  gap: 20px;
   
 }
+
+.header_bot{
+  display: flex;
+  grid-column: span 2;
+  grid-row: 2;
+  justify-content: space-between;
+  padding: 12px 24px;
+  width: 100%;
+}
+
+.user{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.welcome_user{
+  font-size: 24px;
+}
+
+.buttons_header{
+  display: flex;
+  align-items: center;
+}
+
+.list_buttons{
+  list-style: none;
+  display:flex;
+  gap: 20px;
+}
+
+.button:link, .button:visited{
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  width: 150px;
+  color: black;
+  font-size: 24px;
+  border-radius: 100px;
+  background-color: aqua;
+
+  padding: 12px 0;
+}
+
 
 .cards{
   grid-area: cards;
@@ -72,5 +181,11 @@ body{
 
 
 .user_img{
-  width: 100px;
+  width: 15%;
+  border-radius: 50%;
 }
+
+.user_img--small{
+  width: 24px;
+}
+
