--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ body{
   color: black;
   font-size: 24px;
   border-radius: 100px;
-  background-color: aqua;
+  background-color: aquamarine;
 
   padding: 12px 0;
 }
