--- a/styles.css
+++ b/styles.css
@@ -219,10 +219,11 @@ body{
 
 .annoucements{
   display: grid;
-  grid-template-rows: 22px 1fr 22px 1fr;
+  grid-template-rows: 22px 1fr;
   gap: 15px;
   padding: 16px;
   background-color: #eee;
+  
 }
 
 .announcements_card{
@@ -233,8 +234,22 @@ body{
   align-items: center;
   gap: 10px;
   border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.658);
 }
 
+.announ_text{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-bottom: 2px solid gray;
+  padding: 20px;
+  
+
+}
+
+h5{
+  font-size: 16px;
+}
 
 
 
